# simplisafe-apple-home-bridge

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.camera  Dockerfile.homebridge  Dockerfile.livekit  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml
config/: bridge.example.yaml
docs/: architecture.md  github-settings.md  hardware-test-matrix.md  installation.md  security-and-privacy.md  testing-on-macos.md
scripts/: camera-entrypoint.sh
src/simplisafe_apple_home/: __init__.py  auth.py  cli.py  client.py  errors.py  go2rtc.py  livekit_bridge.py  models.py  storage.py
tests/: test_auth.py  test_client.py  test_errors.py  test_go2rtc.py  test_livekit_bridge.py  test_storage.py
